Fixed share and close button issues
Fixed share button font rendering issue on Mac. Reduced the size of
close button for mobile single cards and fixed issue with title getting
hidden behind close button

--- a/public/css/global/modal-share.css
+++ b/public/css/global/modal-share.css
@@ -72,9 +72,14 @@
     }
     .shareBtn__label {
         vertical-align: middle;
-        font-size: 0.85em;
+        font-size: 0.75em;
         padding: 0.125em;
         color: #fff;
+        font-family: 'Open Sans', Arial, Helvetica, sans-serif;
+        font-weight: 400;
+        line-height: 1.25em;
+        text-shadow: 1px 1px #0A693D;
+}
     }
     .shareBtn .shareBtn__label a {
         color: #fff;
